--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 </head>
 
 <body>
-<div class="navbar-fixed blue">
-  <nav>
+<div class="navbar blue" style="opacity:0.5">
+  <nav class="transparent z-depth-0" >
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
