--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 
 <body>
-<div class="navbar blue" >
+<div class="navbar-fixed blue">
   <nav class="z-depth-0" >
     <div class="nav-wrapper" style="opacity:0.7">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
