--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 </head>
 
 <body>
-<div class="navbar-fixed blue">
+<div class="navbar-fixed">
   <nav class="z-depth-0" >
-    <div class="nav-wrapper" style="opacity:0.7">
+    <div class="nav-wrapper blue" style="opacity:0.7">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
