--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 <body>
 <div class="navbar-fixed">
-  <nav class="z-depth-0" >
-    <div class="nav-wrapper blue" style="opacity:0.7">
+  <nav class="transparent z-depth-0" >
+    <div class="nav-wrapper blue" style="opacity:0.8">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
@@ -199,13 +199,13 @@
  
  <footer class="page-footer">
   <div class="grid-wrapper">
-    <div class="footer-copyright">
+    <div class="footer-copyright blue">
       &copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | 
       <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions & Privacy</button>
     <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
     
-    <div class="support">
+    <div class="support waves-green">
         <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
 		      <option value="el">Ελληνικά</option>
 		      <option value="en">English</option>
