--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
     <div class="footer-copyright blue">
       &copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | 
       <!-- Trigger/Open The Modal -->
-<button id="myBtn">Instructions & Privacy</button>
-    <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
+          <button id="myBtn">Instructions & Privacy</button>
+      <!--<button data-target="modal1" class="btn modal-trigger">Modal</button> -->
     
-    <div class="support waves-green">
-        <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
+    <div class="support green">
+    <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
 		      <option value="el">Ελληνικά</option>
 		      <option value="en">English</option>
           <option value="ru">Русский</option>
@@ -222,6 +222,7 @@
           <option value="cs">Czech</option>
 		</select>
     </div>
+
   </div>
   </div>         
   </footer>
