--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       </div>
       <div class="col m6 l4">
         <!-- COLUMN 2 -->
-        <h5 class="footer-heading">POPULAR LINKS</h5>
+        <h5 class="footer-heading">LINKS</h5>
         <div class="row margin-bottom">
           <div class="col s6">
             <ul class="list-unstyled footer-nav">
@@ -220,8 +220,9 @@
             </ul>
           </div>
           <div class="col s6">
+            <div class="container">
             <div class="input-field col s12">
-              <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
+              <select class="lang_selector" align="right" class=”browser-default”>
                 <option value="el">Ελληνικά</option>
                 <option value="en">English</option>
                 <option value="ru">Русский</option>
@@ -236,6 +237,7 @@
                 <option value="he">Hebrew</option>
                 <option value="cs">Czech</option>
               </select>
+              </div>
               </div>
           </div>
         </div>
