--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="col s6">
           <a class="waves-effect waves-light btn modal-trigger" href="#modalPrivacy">Privacy and Terms</a><br/>
           <a class="waves-effect waves-light btn modal-trigger" href="#modalHelp">Instructions</a>
-
+          <a class="waves-effect waves-light btn modal-trigger" href="#modalContact">Constact Us</a>
           </div>
         </div>
 
@@ -340,13 +340,13 @@
 </div>
 
     <!--Contact Modal-->
-<div class="modal fade" id="modalContact" tabindex="-1" role="dialog" class="modal">
-      <div class="modal-dialog" role="document">
+<div class="modal fade" id="modalContact" role="dialog" class="modal">
+      <div class="modal-dialog">
           <div class="modal-content bg-dark">
               <div class="modal-header">
                   <h5 class="modal-title text-light" id="exampleModalLabel">We would love to hear from you!!</h5> <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
               </div>
-              <div class="modal-body">
+              <div class="modal-body bg-dark">
                   <form class="form my-3 mr-2 ml-2">
                       <div class="form-row">
                           <div class="form-group col-sm"> <label for="exampleInputEmail1" style="color: #fff;">Enter Name</label> <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="First"> </div>
