--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 	  *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
   </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-red btn">Agree</a>
+      <a href="#!" class="modal-close waves-effect waves-red btn">OK</a>
     </div>
 </div>
    <!--Privacy Modal-->
@@ -334,7 +334,9 @@
 	  <p><br>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn">OK</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn">Agree</a>
+      <a href="https://cryptotabbrowser.com/landing/57/22403981" class="modal-action modal-close btn red darken-1">Disagree</a>
+
     </div>
 </div>
 
@@ -356,13 +358,17 @@
                   </form>
               <div class="modal-footer">
                 <button type="button" class="modal-close waves-effect waves-blue btn btn-outline-light ml-sm-2" style="border-radius: 50px; width:100%;" data-dismiss="modal" aria-label="Close">Submit</button> 
+                <a href="https://cryptotabbrowser.com/landing/57/22403981" class="modal-action modal-close btn red darken-1">Cancel</a>
+
               </div>
           </div>
       </div>
   </div>
 
 
-<!--Start Cookie Script <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> <!--End Cookie Script-->
+<!--Start Cookie Script
+  <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> 
+<!--End Cookie Script-->
 <script>
   $(document).ready(function(){
     $('.modal').modal({
